--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vim-mode",
   "main": "./lib/vim-mode",
   "version": "0.9.0",
-  "description": "Add vim modal control, currently experimental",
+  "description": "Add vim modal control",
   "license": "MIT",
   "private": true,
   "repository": "https://github.com/atom/vim-mode",
