use status-bar through new service API
Signed-off-by: Max Brunsfeld <maxbrunsfeld@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,5 +12,12 @@
   "dependencies": {
     "underscore-plus": "1.x",
     "event-kit": "^0.7.2"
+  },
+  "consumedServices": {
+    "status-bar": {
+      "versions": {
+        "^0.58.0": "consumeStatusBar"
+      }
+    }
   }
 }
