publish vim-mode as an atom service

--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
         "^0.58.0": "consumeStatusBar"
       }
     }
+  },
+  "providedServices": {
+    "vim-mode": {
+      "description": "",
+      "versions": {
+        "0.1.0": "provideVimMode"
+      }
+    }
   }
 }
